--- a/lib/website_web/components/layouts/root.html.heex
+++ b/lib/website_web/components/layouts/root.html.heex
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="csrf-token" content={get_csrf_token()} />
     <.live_title>
-      <%= assigns[:page_title] || "Website" %>
+      <%= assigns[:page_title] || "Ralph Barac" %>
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <link phx-track-static rel="stylesheet" href={~p"/fonts/indie_flower/indie_flower.css"} />
